<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/date_de_transaction" />

    <TextView
        android:id="@+id/objet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="225dp"
        android:text="@string/objet" />



    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/type" />

    <TextView
        android:id="@+id/montant"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_height="wrap_content"
        android:text="@string/montant" />

</RelativeLayout>