<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/objet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/objet_"/>
        <EditText
            android:id="@+id/montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/montant_"/>
        <Button
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"/>
        
    </LinearLayout>

</RelativeLayout>